# WeGenDiffusion

./: .gitignore  Installation.md  LICENSE  README.md  dataset_downloader.py  diagnos_and_make_gif.ipynb  download.py  environment.yml  eval.py  eval.sh  eval_actual_2.py  eval_powerspectra.sh  explore.ipynb  init_ddp.py  models.py  plot_losses.py  prepare_test_data.py  previous_state_samples.pt  pyproject.toml  sample_custom.py  sample_custom.sh  sample_ddp.py  sample_rollouts.py  sample_rollouts.sh  slurm-12794.out  slurm-12808.out  slurm-13025.out  slurm-13026.out  test_DiT.sh  test_graph_fm_haircore.sh  train.py  train_DiT.sh  train_DiT_jsc.sh  train_graph_fm_haircore.sh  tutorial.ipynb
.ipynb_checkpoints/: tutorial-checkpoint.ipynb
draft/: month_samples.pt
logs/: dit_t2m.14025957.err  dit_t2m.14025957.out  dit_t2m.14025960.err  dit_t2m.14025960.out  dit_t2m.14025978.err  dit_t2m.14025978.out  dit_t2m.14026142.err  dit_t2m.14026142.out  dit_t2m.14026151.err  dit_t2m.14026151.out  dit_t2m.14026161.err  dit_t2m.14026161.out  dit_t2m.14026166.err  dit_t2m.14026166.out  dit_t2m.14026182.err  dit_t2m.14026182.out  dit_t2m.14026251.err  dit_t2m.14026251.out
src/WeGenDiffusion/: config.py  main.py
